--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npm run dev",
     "dev": "node scripts/exec.js dev",
     "build": "node scripts/exec.js build",
-    "test": "node scripts/exec.js test"
+    "test": "node scripts/exec.js test",
+    "example": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -20,22 +21,14 @@
   },
   "homepage": "https://github.com/Jetsly/tools#readme",
   "devDependencies": {
+    "@types/pixi.js": "^4.4.4",
     "autoprefixer": "^7.1.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "chalk": "^1.1.3",
     "css-loader": "^0.28.4",
-    "eslint": "^3.19.0",
-    "eslint-config-vue": "^2.0.2",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^2.0.3",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-vue": "^2.0.1",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.2",
@@ -45,20 +38,22 @@
     "pug-loader": "^2.3.0",
     "sass-loader": "^6.0.5",
     "shelljs": "^0.7.7",
+    "ts-loader": "^2.1.0",
+    "typescript": "^2.3.4",
     "url-loader": "^0.5.8",
+    "vue-class-component": "^5.0.1",
     "vue-loader": "^12.2.1",
-    "vue-template-compiler": "^2.3.3",
+    "vue-property-decorator": "^5.1.0",
+    "vue-template-compiler": "^2.3.4",
     "webpack": "^2.6.1",
     "webpack-config": "^7.0.0",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
-    "core-js": "^2.4.1",
     "pixi.js": "^4.5.2",
     "vue": "^2.3.3",
     "vue-router": "^2.5.3",
-    "vuex": "^2.3.1",
-    "whatwg-fetch": "^2.0.3"
+    "vuex": "^2.3.1"
   }
 }
