--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/Jetsly/tools#readme",
   "devDependencies": {
-    "@types/pixi.js": "^4.4.4",
+    "@types/pixi.js": "^4.5.0",
     "autoprefixer": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -51,6 +51,7 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
+    "pixi-spine": "^1.4.2",
     "pixi.js": "^4.5.2",
     "vue": "^2.3.3",
     "vue-router": "^2.5.3",
