--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
         "experimentalDecorators": true,
         "noImplicitAny": true,
         "noImplicitThis": true,
-        "strictNullChecks": true,
+        "strictNullChecks": false,
         "removeComments": true,
         "suppressImplicitAnyIndexErrors": true,
         "allowSyntheticDefaultImports": true
