--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "node scripts/exec.js dev",
-    "build": "node scripts/exec.js build",
-    "test": "node scripts/exec.js test",
-    "example": "webpack --config webpack.config.js"
+    "dev": "ddotjs serv -f config/webpack.dev.conf.js",
+    "build": "ddotjs build -f config/webpack.prod.conf.js"
   },
   "repository": {
     "type": "git",
@@ -24,21 +22,17 @@
     "@types/pixi.js": "^4.5.0",
     "autoprefixer": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
-    "chalk": "^1.1.3",
     "css-loader": "^0.28.4",
-    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.1",
     "node-sass": "^4.5.3",
-    "pug": "^2.0.0-rc.1",
-    "pug-loader": "^2.3.0",
     "sass-loader": "^6.0.5",
-    "shelljs": "^0.7.7",
     "ts-loader": "^2.1.0",
     "typescript": "^2.3.4",
     "url-loader": "^0.5.8",
@@ -48,7 +42,6 @@
     "vue-template-compiler": "^2.3.4",
     "webpack": "^2.6.1",
     "webpack-config": "^7.0.0",
-    "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
