--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "ddotjs serv -f config/webpack.dev.conf.js",
-    "build": "ddotjs build -f config/webpack.prod.conf.js"
+    "dev": "ddotjs serv",
+    "build": "ddotjs build"
   },
   "repository": {
     "type": "git",
@@ -25,24 +25,10 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.28.0",
-    "imports-loader": "^0.7.1",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.5",
     "ts-loader": "^2.1.0",
-    "typescript": "^2.3.4",
-    "url-loader": "^0.5.8",
+    "typescript": "^2.5.3",
     "vue-class-component": "^5.0.1",
-    "vue-loader": "^12.2.1",
-    "vue-property-decorator": "^5.1.0",
-    "vue-template-compiler": "^2.3.4",
-    "webpack": "^2.6.1",
-    "webpack-config": "^7.0.0",
-    "webpack-hot-middleware": "^2.18.0"
+    "vue-property-decorator": "^5.1.0"
   },
   "dependencies": {
     "pixi.js": "^4.5.2",
